AC_INIT(src/Reminder.cs)
AM_INIT_AUTOMAKE(tomboy-reminder, 0.9.2)
AM_MAINTAINER_MODE

AC_PROG_INSTALL

#
# Find mcs
#
AC_PATH_PROG(GMCS, gmcs)
if test "x$GMCS" = "x" ; then
	AC_MSG_ERROR([Can't find "gmcs", the mono compiler in your PATH])
fi

#
# Finds the tomboy addins interface
#
PKG_CHECK_MODULES(TOMBOY_ADDINS, tomboy-addins >= 0.10)
AC_SUBST(TOMBOY_ADDINS_LIBS)

#
#Find the tomboy addin dir
#
TOMBOY_ADDINSDIR=$($PKG_CONFIG --variable=addinsdir tomboy-addins)
AC_SUBST([TOMBOY_ADDINSDIR])

AC_OUTPUT([
Makefile
src/Makefile
])
